--- a/manifest.yml
+++ b/manifest.yml
@@ -1,6 +1,6 @@
 ---
 applications:
 - buildpack: https://github.com/cloudfoundry/staticfile-buildpack
-  name: Puppy_IC
+  name: Puppy_OS_26082019
   memory: 56M
-  random-route: true
+  
